src/objects/Project__c.object
<CustomObject>
    <description>Projects decsription</description>
    <fields>
        <fullName>Aproval__c</fullName>
        <label>Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budgeted_Cost__c</fullName>
        <formula>IF(Duration_in_hours__c &lt; 100 , Duration_in_hours__c * 60,IF(Duration_in_hours__c &lt; 500, Duration_in_hours__c * 50, Duration_in_hours__c * 40))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budgeted Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Client</description>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration_in_hours__c</fullName>
        <externalId>true</externalId>
        <label>Duration(in hours)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End Date</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>Project Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start date</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>End_Date</fullName>
        <active>true</active>
        <description>End date</description>
        <errorConditionFormula>End_Date__c &gt; DATE(2018,01,01)</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End data should be less than 1 jan 2018</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Min_Max_Duration_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>OR(Duration_in_hours__c &lt; 50,Duration_in_hours__c &gt; 2000)</errorConditionFormula>
        <errorDisplayField>Duration_in_hours__c</errorDisplayField>
        <errorMessage>Minimun duration of Project should be greater then 50 and less than 2000</errorMessage>
    </validationRules>
</CustomObject>